fix smooth scroll on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -16,13 +16,22 @@
 
 /*   --primary-light: #e5d8c8;  slightly browner */
 
-:target {
-  scroll-margin-top: 64px;
+@media (max-width: 599px) {
+  :target {
+    scroll-margin-top: 56px;
+  }
+}
+
+@media (min-width: 600px) {
+  :target {
+    scroll-margin-top: 64px;
+  }  
 }
 
 
 html {
   scroll-behavior: smooth;
+  overscroll-behavior: contain;
 }
 
 html,
